# pokechan_trend

./: .gitignore
.github/workflows/: collect.yml
backend/: .env.example  backfill_period_search.py  backfill_scrape.py  classify_video_types.py  collector.py  config.py  export_snapshot.py  fetch_video_details.py  forecast_config.py  forecaster.py  generate_pokemon_names.py  llm_classifier.py  pokemon_images.py  pokemon_matcher.py  pokewiki.py  pyproject.toml  refine_counter_targets.py  requirements.txt  rss_watcher.py  scrape_collector.py  seed_creators.py  snapshotter.py  supabase_client.py  sync_video_types_to_db.py  video_registrar.py  youtube_client.py
backend/data/: counter_targets.json  gt_daily_ranks_single.csv  pokemon_names.json  video_types.json
backend/sql/: schema.sql
docs/: influence_model.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  CalendarHeatmap.jsx  ContributionModal.jsx  SurgeStrip.jsx  TopThree.jsx  index.css  main.jsx  mockData.js
supabase/migrations/: 20260705120000_add_video_type.sql
